--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
     <input class="searchbar" type="text" placeholder="Where do you wanna go?...">
     <div class="row" style="margin: 70px 0 0 0;" >
       <div class="feature-box col-lg-4 col-sm-4 col-md-4">
-        <i class="icon fa-regular fa-thumbs-up fa-3x"></i>
+        <i class="icon fa-regular fa-thumbs-up fa-4x"></i>
         <p> 500+ REVIEWS</p>
       </div>
 
       <div class="feature-box col-lg-4 col-sm-4 col-md-4">
-        <i class="icon fa-regular fa-map fa-3x"></i>
+        <i class="icon fa-regular fa-map fa-4x"></i>
         <p>120+ GROUP DEPARTURES</p>
       </div>
 
       <div class="feature-box col-lg-4 col-sm-4 col-md-4">
-        <i class="icon fa-regular fa-heart fa-3x"></i>
+        <i class="icon fa-regular fa-heart fa-4x"></i>
         <p>2000 + HAPPY TRAVELLERS</p>
       </div>
   </div>
@@ -91,26 +91,26 @@
 
   <div class="container-fluid">
 
-    <h2  class="timelineHeading">Explore Travelogged</h2>
+    <h2>Explore Travelogged</h2>
 
     <div class="row">
-      <div class="feature-box col-lg-3 col-sm-6 col-md-6">
-        <i class="icon fa-solid fa-car-side fa-3x"></i>
+      <div class="feature-box col-lg-6 col-sm-6 col-md-6">
+        <i class="icon fa-solid fa-car-side fa-4x"></i>
         <p>LADAKH & SPITI 2022</p>
       </div>
 
-      <div class="feature-box col-lg-3 col-sm-6 col-md-6">
-        <i class="icon fa-solid fa-suitcase-rolling fa-3x"></i> 
+      <div class="feature-box col-lg-6 col-sm-6 col-md-6">
+        <i class="icon fa-solid fa-suitcase-rolling fa-4x"></i> 
         <p>BACKPACKING TRIPS</p>
       </div>
 
-      <div class="feature-box col-lg-3 col-sm-6 col-md-6">
-        <i class="icon fa-solid fa-calendar-days fa-3x"></i>
+      <div class="feature-box col-lg-6 col-sm-6 col-md-6">
+        <i class="icon fa-solid fa-calendar-days fa-4x"></i>
         <p>WEEKEND TRIPS</p>
       </div>
 
-      <div class="feature-box col-lg-3 col-sm-6 col-md-6">
-        <i class="icon fa-solid fa-house-chimney fa-3x"></i>
+      <div class="feature-box col-lg-6 col-sm-6 col-md-6">
+        <i class="icon fa-solid fa-house fa-4x"></i>
         <p>WORKCATIONS STAYS</p>
       </div>
     </div>
@@ -119,9 +119,7 @@
 
 <!-- Upcoming Trips -->
 
-<section class="white-section" id="trips">
 
-  <div class="container-fluid">
     <h2>Upcoming Trips</h2>
 
     <div class="container">
@@ -135,6 +133,8 @@
 
               <div class="event-info">
                   <p class="title">Kashmir Winter Expedition</p>
+                  <p class="price">₹25,999/-</p>
+                  <p class="info">Srinagar</p>
                   <div class="separator"></div>
                   <p class="info">Srinagar</p>
                   <p class="price">₹25,999/-</p>
@@ -228,109 +228,86 @@
           </div>
       </div>
   </div>
-  
-    
-  </div>
-
-
-</section>
 
  <!-- Testimonials -->
 
  <section class="colored-section" id="testimonials">
 
-  <div id="testimonial-carousel" class="carousel slide" data-ride="false">
-    <div class="carousel-inner">
-      <h2>What Others have to say About Us?</h2>
-      <div class="carousel-item carousl active container-fluid">
-        <p class="testimonial-text">
-          I visited Manali with Travelogged and God it was wonderful. It was my first solo trip with them. In this Budget, this level of service was unbeliveable. It would have happily paid double for it!!
-          <br>
-          The hotels, food, coordinator knowledge and interaction with everyone made it such a smooth and fun trip.
-          <br>
-          Thank You so much Travelogged.
-        </p>
-        <img class="testimonial-image" src="public/images/lady-img.jpg" alt="lady-profile">
-        <em style="color: black;">@parularora0922</em>
+  <div class="container-fluid">
+
+    <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+      <div class="carousel-inner">
+        <h2>What Others have to say About Us?</h2>
+        <div class="carousel-item carousl active container-fluid">
+          <p class="testimonial-text">
+            I visited Manali with Travelogged and God it was wonderful. It was my first solo trip with them. In this Budget, this level of service was unbeliveable. It would have happily paid double for it!!
+            <br>
+            The hotels, food, coordinator knowledge and interaction with everyone made it such a smooth and fun trip.
+            <br>
+            Thank You so much Travelogged.
+          </p>
+          <img class="testimonial-image" src="public/images/lady-img.jpg" alt="lady-profile">
+          <em style="color: black;">@parularora0922</em>
+        </div>
+        <div class="carousel-item carousl container-fluid">
+          <p class="testimonial-text">
+            It was indeed one of the most wonderful experiences having my first trip with travelogged.in. Kedarnath was never that easy but these Guys made sure that we enjoy every each bit of it. Their Management and facilities were good. I would highly recommend and of course I am planning to travel with them super soon.
+          </p>
+          <img class="testimonial-image" src="public/images/angela.png" alt="lady-profile">
+          <em style="color: black;">Beverly, Illinois</em>
+        </div>
       </div>
-      <div class="carousel-item carousl container-fluid">
-        <p class="testimonial-text">
-          It was indeed one of the most wonderful experiences having my first trip with travelogged.in. Kedarnath was never that easy but these Guys made sure that we enjoy every each bit of it. Their Management and facilities were good. I would highly recommend and of course I am planning to travel with them super soon.
-        </p>
-        <img class="testimonial-image" src="public/images/angela.png" alt="lady-profile">
-        <em style="color: black;">Beverly, Illinois</em>
-      </div>
+      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-  <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-  <span class="carousel-control-next-icon"></span>
-    </a>
+  
+  </section>
   </div>
 
-</section>
+  
 
-<!-- Pricing -->
+<!-- Features -->
 
-<section class="white-section" id="pricing">
+<section class="white-section" id="Services">
 
-  <h2>Pricing</h2>
-  <p>Simple and affordable price plans for your trip.</p>
+  <div class="container-fluid">
 
-  <div class="row">
+    <h2>Travelogged Services</h2>
 
-    <div class="pricing-column col-lg-4 col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h3>One Day</h3>
-        </div>
-        <div class="card-body">
-          <h2 class="price-text">Free</h2>
-          <p>Transportation</p>
-          <p>Meal</p>
-          <p>Stay</p>
-          <button class="btn btn-lg btn-block btn-outline-dark" type="button">Book Now</button>
-        </div>
+    <div class="row">
+      <div class="feature-box col-lg-3 col-sm-12 col-md-12">
+        <i class="icon ser fa-solid fa-people-group fa-4x"></i>
+        <h2>No Third Party Mess</h2>
+        <p>All the trips at WanderOn are managed end to end by our in-house operations team. 
+          There are no third parties involved and hence no fishy claims. So when we say your travel plan is 100% our responsibility, we mean it.</p>
+      </div>
+
+      <div class="feature-box col-lg-3 col-sm-12 col-md-12">
+        <i class=" icon ser fa-solid fa-magnifying-glass fa-4x"></i> 
+        <h2>Transparency & Security</h2>
+        <p>All the Itineraries are backed up by a strong ground team that monitors every route and condition real time. 
+          This ensures transparency and solidifies the security measures for all our travelers.</p>
+      </div>
+
+      <div class="feature-box col-lg-3 col-sm-12 col-md-12">
+        <i class=" icon ser fa-solid fa-shield-halved fa-4x"></i>
+        <h2>Co-travellers Filtering</h2>
+        <p>Group trips are fun when you have like-minded fellow travelers. 
+          We assure that through a well-defined filtering process at all the stages, beginning from marketing, sales to operations.</p>
+      </div>
+
+      <div class="feature-box col-lg-3 col-sm-12 col-md-12">
+        <i class="icon ser fa-solid fa-earth-asia fa-4x"></i>
+        <h2>One stop hassle free experience</h2>
+        <p>Our entire team puts rigorous efforts on ground to make sure your experience is a top notch one. 
+          Awesome stays, friendly drivers, hospitable ground staff is ready to make your trip the most memorable for lifetime.</p>
       </div>
     </div>
-
-    <div class="pricing-column col-lg-4 col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h3>1 Week</h3>
-        </div>
-        <div class="card-body">
-          <h2 class="price-text">1000 / week</h2>
-          <p>Transportation</p>
-          <p>Meal</p>
-          <p>Stay</p>
-          <button class="btn btn-lg btn-block btn-dark" type="button">Book Now</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="pricing-column col-lg-4">
-      <div class="card">
-        <div class="card-header">
-          <h3>Monthly</h3>
-        </div>
-        <div class="card-body">
-          <h2 class="price-text">10000 / month</h2>
-          <p>Transportation</p>
-          <p>Meal</p>
-          <p>Stay</p>
-          <p>Free Welcome Goodies</p>
-          <button class="btn btn-lg btn-block btn-dark" type="button">Book Now</button>
-
-        </div>
-      </div>
-    </div>
-
-
-
   </div>
-
 </section>
 
 <!-- Call to Action -->
